<resources>
    <string name="app_name">Simplical</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="home_fragment_label">Home</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="settings_fragment_enter_calories">Enter Calories</string>
    <string name="greeting">The simple way to count calories and reach your ideal weight.\n\nIt\'s time to get healthy,\nare you ready?</string>
    <string name="next">Let\'s Go!</string>

    <!-- Q&A / Settings-->
    <string name="previous">Previous</string>
    <string name="acquainted">Your Profile</string>
    <string name="settingsTitle">Settings</string>
    <string name="questionPreface">Answer a few questions to start painting a picture of your health.</string>
    <string name="questionSex">Which sex are you?</string>
    <string name="questionBirthDate">Your age?</string>
    <string name="hintBirthDate">18+</string>
    <string name="sexMale">Male</string>
    <string name="sexFemale">Female</string>
    <string name="questionHeight">Your height in inches?</string>
    <string name="hintHeight">72.5</string>
    <string name="questionWeight">How many pounds do you weigh?</string>
    <string name="hintWeight">204.6</string>
    <string name="questionActivityLevel">How active are you?</string>
    <string name="al110">Spend most of day sitting, no exercise</string>
    <string name="al120">Spend most of day sitting, very little exercise</string>
    <string name="al137">Slightly active and light exercise 1–3 days per week</string>
    <string name="al155">Moderately active and moderate exercise 3–5 days per week</string>
    <string name="al173">Very active with hard exercise 6–7 days per week</string>
    <string name="al190">Extremely active, physically demanding job, insane workout routines</string>
    <string name="questionWeightLossPacing">Desired rate of weight change</string>
    <string name="pace0Lb">0 pound a week (maintain)</string>
    <string name="pace05Lb">0.5 pound a week (slow)</string>
    <string name="pace1Lb">1 pound a week (moderate)</string>
    <string name="pace15Lb">1.5 pounds a week (fast)</string>
    <string name="pace2Lb">2 pounds a week (very fast!)</string>
    <string name="buttonLooksGood">Looks good!</string>

    <!-- Enter calories -->
    <string name="enter_calories_title">Calorie Entry</string>
    <string name="enter_calories_each">Calories (each)</string>
    <string name="enter_calories_quantity">Quantity</string>
    <string name="enter_calories_source">Description (optional)</string>
    <string name="enter_calories_hint_calories">310</string>
    <string name="enter_calories_hint_quantity">1</string>
    <string name="enter_calories_hint_source">Pizza, large slice of pepperoni</string>
    <string name="enter_calories_button">Enter</string>
    <string name="enter_calories_favorite_question">Save to favorites? Requires a description</string>

    <!-- Update weight -->
    <string name="update_weight_title">Weigh In</string>
    <string name="update_weight_question">Current Weight?</string>
    <string name="update_weight_button">Save</string>

    <!-- Set goal weight -->
    <string name="goal_weight_title">Set Goal Weight</string>
    <string name="goal_weight_question">So, what\'s your goal?</string>
    <string name="goal_weight_button">Set</string>
    <string name="goal_text">
        Based on your height the World Health Organization lists a healthy weight as between
        <b>%1$.1f</b> at 18.5 BMI and <b>%2$.1f</b> at 25.0 BMI.\n
        \n
        At 21.75 BMI your weight would be <b>%3$.1f</b>\n
        \n
        The D. R. Miller Ideal Body Weight formula suggests a weight of %4$.1f based on your
        height and sex.

    </string>

    <!-- Main Menu -->
    <string name="caloriesRemaining">Calories Remaining Today</string>
    <string name="currentWeight">Current Weight</string>
    <string name="enter_calories">Enter Calories</string>
    <string name="weightRemaining">Weight Remaining</string>
    <string name="updateGoalWeight">Update Goal Weight</string>
    <string name="weighIn">Weigh In</string>
    <string name="enterFavorite">Enter Favorite</string>
    <string name="updateDetails">Update Details</string>

    <string name="hello_first_fragment">Welcome to Simplical</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="select_favorite">Select Favorite</string>
    <string name="choose_favorite">Choose Favorite</string>
    <string name="quantity">Quantity</string>
    <string name="_1">1</string>

    <string name="remove">Remove</string>
    <string name="day_in_review">Day in Review</string>
    <string name="select_any_items_you_would_like_to_remove">Select any items you would like to remove.</string>
    <string name="review_daily_calories">Review Your Day</string>
    <string name="remove_favorites">Remove Favorites</string>
    <string name="accept">Accept</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_favorites">Manage Favorites</string>
    <string name="update_profile">Update Profile</string>
    <string name="debug_functions">Debug Functions</string>
    <string name="reset_data">Reset Data</string>
    <string name="reset_onboarding">Reset Onboarding</string>
    <string name="day_in_review_age">Age</string>
    <string name="_0">0</string>
    <string name="day_in_review_sex">Sex</string>
    <string name="calories_consumed_today">Calories Consumed Today</string>
</resources>
