<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.myapplication.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.myapplication.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_MainFragment"
            app:destination="@id/HomeFragment"
            app:popUpTo="@+id/FirstFragment"
            app:popUpToInclusive="true"

            />
    </fragment>
    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.myapplication.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home"
        >
        <action
            android:id="@+id/action_HomeFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment"
            />
        <action
            android:id="@+id/action_HomeFragment_to_EnterCaloriesFragment"
            app:destination="@id/EnterCaloriesFragment"
            />
        <action
            android:id="@+id/action_HomeFragment_to_UpdateWeightFragment"
            app:destination="@id/UpdateWeightFragment"
            />
        <action
            android:id="@+id/action_HomeFragment_to_UpdateGoalWeight"
            app:destination="@id/UpdateGoalWeight"
            />
        <action
            android:id="@+id/action_HomeFragment_to_EnterFavoriteFragment"
            app:destination="@id/EnterFavoriteFragment"
            />
    </fragment>

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.example.myapplication.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings"
        >
    </fragment>
    <fragment
        android:id="@+id/EnterCaloriesFragment"
        android:name="com.example.myapplication.EnterCaloriesFragment"
        android:label="@string/settings_fragment_enter_calories"
        tools:layout="@layout/fragment_enter_calories"
        />
    <fragment
        android:id="@+id/UpdateWeightFragment"
        android:name="com.example.myapplication.UpdateWeightFragment"
        android:label="@string/update_weight_title"
        tools:layout="@layout/fragment_update_weight"
        />
    <fragment
        android:id="@+id/UpdateGoalWeight"
        android:name="com.example.myapplication.GoalWeightFragment"
        android:label="Update Goal Weight"
        tools:layout="@layout/fragment_goal_weight"
        />
    <fragment
        android:id="@+id/EnterFavoriteFragment"
        android:name="com.example.myapplication.EnterFavoriteFragment"
        android:label="Enter Favorite"
        tools:layout="@layout/fragment_enter_favorite"
        />

</navigation>
