<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    android:paddingLeft="16sp"
    android:paddingRight="16sp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:autofillHints=""
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/screenBackground"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorFontDefault"
            android:id="@+id/text_select_favorite"
            android:text="@string/select_favorite" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20sp" />

        <RadioGroup
            android:id="@+id/radio_group_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorFontDefault"
            android:id="@+id/text_quantity"
            android:text="@string/quantity" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <EditText
            android:id="@+id/edit_favorite_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/_1"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <Button
            android:id="@+id/button_choose_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_favorite"
            android:layout_gravity="center_horizontal"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>