<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    android:paddingLeft="16sp"
    android:paddingRight="16sp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:autofillHints=""
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/screenBackground"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorFontDefault"
            android:id="@+id/text_daily_review"
            android:text="@string/day_in_review" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_any_items_you_would_like_to_remove" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@color/screenBackground"
            android:orientation="vertical"
            android:id="@+id/daily_review_vertical_list" >

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20sp" />

        <Button
            android:id="@+id/button_remove_from_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:layout_gravity="center_horizontal"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>