<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="16sp"
    android:paddingRight="16sp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:autofillHints=""
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/screenBackground"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/goal_weight_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/goal_weight_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorFontDefault" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <TextView
            android:id="@+id/goal_weight_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text=""
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <TextView
            android:id="@+id/goal_weight_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/goal_weight_question"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorFontDefault" />

        <EditText
            android:id="@+id/edit_goal_weight_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <Button
            android:id="@+id/goal_weight_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/goal_weight_button" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>